yaml/was-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywas
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mywas
  template:
    metadata:
      labels:
        app: mywas
    spec:
      containers:
      - name: mywas
        image: cicd-image
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
