yaml/was-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywas
spec:
  type: ClusterIP
  selector:
    app: mywas
  ports:
  - port: 8080
    targetPort: 8080
