yaml/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb-svc
spec:
  selector:
    app: myweb
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
